# fuzzing-101_solution

./: Cargo.toml  README.md
exercise-1/: .cur_input  .gitignore  Cargo.toml  Makefile.toml  build.rs
exercise-1/src/: main.rs
exercise-1/timeouts/: 15a4b02857783742  411d56b9688a396b  89c1a201a8191edf  ee07530230595ba7
exercise-2/: .gitignore  Cargo.toml  Makefile.toml  harness.c
exercise-2/output/: afltriage_ASAN_heap-buffer-overflow_READ_exif_entry_get_value_4cea0bdffdfe4d9c0093798d70c9368e.txt  afltriage_SIGSEGV_exif_get_sshort_d8c265939f0f6e1a725054a9a181d649.txt
exercise-2/solutions/: 6bffd4cf55c3c2b3  f4d4fa3deb7a810f
exercise-2/src/: lib.rs
exercise-3/: .cur_input  .gitignore  Cargo.toml  Makefile.toml  create-bootp.py  pyproject.toml
exercise-3/corpus/: bootp-testcase.pcap
exercise-3/src/: main.rs  parser.rs
