[package]
name = "exercise-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libafl = { version = "0.7.0", path = "../../../tools/LibAFL/libafl" }
libafl_sugar = { version = "0.7.0",path = "../../../tools/LibAFL/libafl_sugar" }
libafl_targets = { version = "0.7.0",path = "../../../tools/LibAFL/libafl_targets", features = ["libfuzzer", "sancov_pcguard_hitcounts"] }
[lib]
name = "exercisetwo"
crate-type = ["staticlib"]