[package]
name = "exercise-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libafl = "0.7.0"
libafl_sugar = "0.7.0" 
libafl_targets = "0.7.0"
[lib]
name = "exercisetwo"
crate-type = ["staticlib"]
