[package]
name = "exercise-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["derive"] }
libafl = "0.7.0"
libafl_sugar = "0.7.0" 
libafl_targets = "0.7.0"
